# gloo-edge-gitops-quickstart

./: .editorconfig  .gitignore  404.html  Makefile  README.md  argocd.yml  cleanup.yml  clusters.yml  gitea.yml  gitops.yml  index.html  mkdocs.yml  pipelines.yml  playbook.yml  pyproject.toml  requirements.yml  sitemap.xml  tools.yml  vars.yml
ansible/: index.html
ansible-playbooks/: index.html
apps/bookinfo/details/: kustomization.yaml
apps/bookinfo/productpage/: kustomization.yaml
apps/bookinfo/ratings/: kustomization.yaml
apps/bookinfo/reviews-v1/: kustomization.yaml
apps/bookinfo/reviews-v2/: kustomization.yaml
apps/bookinfo/reviews-v3/: kustomization.yaml
apps/httpbin/: kustomization.yaml
apps/petstore/: kustomization.yaml
charts/argocd-apps/: Chart.yaml  values.yaml
charts/argocd-apps/templates/: bookinfo-details.yaml  bookinfo-productpage.yaml  bookinfo-ratings.yaml  bookinfo-reviews-v1.yaml  bookinfo-reviews-v2.yaml  bookinfo-reviews-v3.yaml  gloo-edge.yaml  (+5 more)
charts/portal/: Chart.yaml  values.yaml
clean-up/: index.html
docs/: ansible-playbooks.md  ansible.md  clean-up.md  env-setup.md  gitops.md  index.md  tools-and-sources.md  troubleshooting.md
env-setup/: index.html
gitops/: index.html
helm_vars/argocd_apps/: all.yaml  bookinfo-all.yaml  bookinfo-v1-v2.yaml  bookinfo-v2.yaml  bookinfo-v3.yaml  edge-only.yaml  edge-with-keycloak.yaml  edge-with-portal.yaml
includes/: abbrevations.md  tools.md
search/: search_index.json
templates/argocd/: apps-values.yaml.j2
tools-and-sources/: index.html
troubleshooting/: index.html
(+18 files in other folders)
