[tool.poetry]
name = "gloo-mesh-demos"
version = "0.1.0"
description = "Gloo Mesh Demo"
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]
license = "ASL-2"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^4.8.0"
kubernetes = "^19.15.0"
jsonpatch = "^1.32"
jmespath = "^0.10.0"
pexpect = "^4.8.0"
pyOpenSSL = "^21.0.0"
yamllint = "^1.26.3"
ansible-lint = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
